--- a/ab_test_basic.ipynb
+++ b/ab_test_basic.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "4     1           0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,6 +590,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('user_id', axis=1, inplace=True)\n",
+    "df_dummy = pd.get_dummies(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -608,10 +618,6 @@
     }
    ],
    "source": [
-    "df.drop('user_id', axis=1, inplace=True)\n",
-    "\n",
-    "df_dummy = pd.get_dummies(df)\n",
-    "\n",
     "# test is the model target and conversion is no need to check\n",
     "features = df_dummy.drop(['test', 'conversion'], axis=1)\n",
     "\n",
@@ -667,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +736,7 @@
        "1              0.173223         0.017236"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,6 +799,387 @@
     "\n",
     "print(ttest_all)\n",
     "print(ttest_remove)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Oversamplling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import resample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Oversamplling for country_Argentina"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test\n",
+       "0    0.050488\n",
+       "1    0.173223\n",
+       "Name: country_Argentina, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dummy.groupby('test')['country_Argentina'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the ideal ratio in control group is also 0.173223\n",
+    "\n",
+    "ratio = df_dummy.groupby('test')['country_Argentina'].mean()[1]\n",
+    "g0_size = df_dummy[df_dummy['test']==0]['test'].count()\n",
+    "\n",
+    "g0_no = g0_size * ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test  country_Argentina\n",
+       "0     0                    175955\n",
+       "      1                      9356\n",
+       "1     0                    178397\n",
+       "      1                     37377\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dummy.groupby(['test', 'country_Argentina']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22744"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_sample = int(g0_no - 9356)\n",
+    "extra_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oversampled_data = resample(df_dummy[(df_dummy['test']==0) & (df_dummy['country_Argentina']==1)], \n",
+    "                            replace=True, n_samples=extra_sample, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighted_data = pd.concat([df_dummy, oversampled_data], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test  country_Argentina\n",
+       "0     0                    175955\n",
+       "      1                     32100\n",
+       "1     0                    178397\n",
+       "      1                     37377\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_data.groupby(['test', 'country_Argentina']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Oversamppling for country_Uruguay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test\n",
+       "0    0.002239\n",
+       "1    0.017236\n",
+       "Name: country_Uruguay, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dummy.groupby('test')['country_Uruguay'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the ideal ratio in control group is also 0.017236\n",
+    "\n",
+    "ratio = df_dummy.groupby('test')['country_Uruguay'].mean()[1]\n",
+    "g0_size = df_dummy[df_dummy['test']==0]['test'].count()\n",
+    "\n",
+    "g0_no = g0_size * ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test  country_Uruguay\n",
+       "0     0                  184896\n",
+       "      1                     415\n",
+       "1     0                  212055\n",
+       "      1                    3719\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dummy.groupby(['test', 'country_Uruguay']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2778"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_sample = int(g0_no - 415)\n",
+    "extra_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oversampled_data = resample(df_dummy[(df_dummy['test']==0) & (df_dummy['country_Uruguay']==1)], \n",
+    "                            replace=True, n_samples=extra_sample, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighted_data = pd.concat([weighted_data, oversampled_data], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### T-test for weighted data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_Argentina</th>\n",
+       "      <th>country_Uruguay</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>test</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.152253</td>\n",
+       "      <td>0.015145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.173223</td>\n",
+       "      <td>0.017236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      country_Argentina  country_Uruguay\n",
+       "test                                    \n",
+       "0              0.152253         0.015145\n",
+       "1              0.173223         0.017236"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weighted_data.groupby('test')['country_Argentina', 'country_Uruguay'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g0 = weighted_data[weighted_data['test']==0]['conversion']\n",
+    "g1 = weighted_data[weighted_data['test']==1]['conversion']\n",
+    "\n",
+    "ttest_all = stats.ttest_ind(g0, g1, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=1.538467765140941, pvalue=0.12393502680268599)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# after oversamplling data for the two countries, there's no difference between experimental group and control group\n",
+    "\n",
+    "ttest_all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Novelty Effect"
    ]
   },
   {
