--- a/ab_test_basic.ipynb
+++ b/ab_test_basic.ipynb
@@ -1184,6 +1184,254 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_columns', 20)\n",
+    "pd.set_option('display.width', 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('novelty_effect.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>signup_date</th>\n",
+       "      <th>test_date</th>\n",
+       "      <th>browser</th>\n",
+       "      <th>test</th>\n",
+       "      <th>pages_visited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-08-15</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-08-12</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>178</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-08-10</td>\n",
+       "      <td>Safari</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>383</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-08-05</td>\n",
+       "      <td>Firefox</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>397</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>2015-08-27</td>\n",
+       "      <td>IE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id signup_date   test_date  browser  test  pages_visited\n",
+       "0       34  2015-01-01  2015-08-15   Chrome     0              6\n",
+       "1       59  2015-01-01  2015-08-12   Chrome     1              6\n",
+       "2      178  2015-01-01  2015-08-10   Safari     1              3\n",
+       "3      383  2015-01-01  2015-08-05  Firefox     1              9\n",
+       "4      397  2015-01-01  2015-08-27       IE     0              1"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=5.474295518566027, pvalue=4.403954129457701e-08)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g0 = df[df['test']==0]['pages_visited']\n",
+    "g1 = df[df['test']==1]['pages_visited']\n",
+    "\n",
+    "stats.ttest_ind(g1, g0, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "test\n",
+       "0    4.609804\n",
+       "1    4.694989\n",
+       "Name: pages_visited, dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('test')['pages_visited'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### User segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['user_new'] = 0\n",
+    "df.loc[df['signup_date']==df['test_date'], 'user_new'] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### New users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.0809363577979878, pvalue=0.27973874896130424)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No significant difference in new user group\n",
+    "\n",
+    "g0 = df[(df['user_new']==1) & (df['test']==0)]['pages_visited']\n",
+    "g1 = df[(df['user_new']==1) & (df['test']==1)]['pages_visited']\n",
+    "\n",
+    "stats.ttest_ind(g1, g0, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Retruning users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=6.910803219940347, pvalue=4.859481805141211e-12)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Novolty effects on retruning users\n",
+    "\n",
+    "g0 = df[(df['user_new']==0) & (df['test']==0)]['pages_visited']\n",
+    "g1 = df[(df['user_new']==0) & (df['test']==1)]['pages_visited']\n",
+    "\n",
+    "stats.ttest_ind(g1, g0, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
